pobomofo method can select and change candidate

--- a/src/.deps/ibus_engine_ez-dict.Po
+++ b/src/.deps/ibus_engine_ez-dict.Po
@@ -475,7 +475,16 @@ ibus_engine_ez-dict.o: dict.cpp /usr/include/stdc-predef.h dict.h \
  /usr/include/c++/11/bits/stl_uninitialized.h \
  /usr/include/c++/11/bits/stl_vector.h \
  /usr/include/c++/11/bits/stl_bvector.h \
- /usr/include/c++/11/bits/vector.tcc
+ /usr/include/c++/11/bits/vector.tcc /usr/include/c++/11/map \
+ /usr/include/c++/11/bits/stl_tree.h \
+ /usr/include/c++/11/ext/aligned_buffer.h \
+ /usr/include/c++/11/bits/node_handle.h \
+ /usr/include/c++/11/bits/stl_map.h /usr/include/c++/11/tuple \
+ /usr/include/c++/11/utility /usr/include/c++/11/bits/stl_relops.h \
+ /usr/include/c++/11/array /usr/include/c++/11/bits/uses_allocator.h \
+ /usr/include/c++/11/bits/invoke.h \
+ /usr/include/c++/11/bits/stl_multimap.h \
+ /usr/include/c++/11/bits/erase_if.h
 /usr/include/stdc-predef.h:
 dict.h:
 /usr/include/ibus-1.0/ibus.h:
@@ -1038,3 +1047,16 @@ dict.h:
 /usr/include/c++/11/bits/stl_vector.h:
 /usr/include/c++/11/bits/stl_bvector.h:
 /usr/include/c++/11/bits/vector.tcc:
+/usr/include/c++/11/map:
+/usr/include/c++/11/bits/stl_tree.h:
+/usr/include/c++/11/ext/aligned_buffer.h:
+/usr/include/c++/11/bits/node_handle.h:
+/usr/include/c++/11/bits/stl_map.h:
+/usr/include/c++/11/tuple:
+/usr/include/c++/11/utility:
+/usr/include/c++/11/bits/stl_relops.h:
+/usr/include/c++/11/array:
+/usr/include/c++/11/bits/uses_allocator.h:
+/usr/include/c++/11/bits/invoke.h:
+/usr/include/c++/11/bits/stl_multimap.h:
+/usr/include/c++/11/bits/erase_if.h:
